cluster/manifests/http-kvs/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: http-kvs
  labels:
    name: http-kvs
    pod-security.kubernetes.io/enforce: restricted
