cluster/manifests/http-kvs/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: http-kvs
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: http-kvs
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
