cluster/manifests/http-kvs/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: http-kvs
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - http-kvs.minikube.127.0.0.1.nip.io
        - http-kvs.kaidotio.dev
        - http-kvs-public.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
