cluster/manifests/http-kvs/overlays/dev/virtual_service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: http-kvs
spec:
  gateways:
    - http-kvs
  hosts:
    - http-kvs.minikube.127.0.0.1.nip.io
    - http-kvs.kaidotio.dev
    - http-kvs-public.kaidotio.dev
  http:
    - route:
        - destination:
            host: http-kvs
            port:
              number: 8080
      retries:
        attempts: 3
        retryOn: gateway-error,retriable-4xx,connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
