cluster/manifests/http-kvs/overlays/dev/authorization_policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: http-kvs
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: http-kvs
      app.kubernetes.io/component: ""
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - istio-gateways
            principals:
              - cluster.local/ns/istio-gateways/sa/istio-ingressgateway-service-account
      when:
        - key: request.headers[host]
          values:
            - http-kvs.minikube.127.0.0.1.nip.io
            - http-kvs.kaidotio.dev
    - from:
        - source:
            namespaces:
              - url-shortener
    - from:
        - source:
            namespaces:
              - slack-logger
      to:
        - operation:
            methods:
              - POST
    - from:
        - source:
            namespaces:
              - istio-gateways
            principals:
              - cluster.local/ns/istio-gateways/sa/istio-ingressgateway-service-account
      when:
        - key: request.headers[host]
          values:
            - http-kvs-public.kaidotio.dev
        - key: request.auth.claims[iss]
          values:
            - https://token.actions.githubusercontent.com
        - key: request.auth.claims[repository]
          values:
            - hippocampus-dev/hippocampus
      to:
        - operation:
            methods:
              - GET
